# floating_camera_plugin

./: CMakeLists.txt  README.md  package.xml
launch/: spawn_robot.launch
src/: floating_camera_plugin.cc  floating_camera_plugin.hh
urdf/: floating_rbs.urdf.xacro
